2009-06-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Information whether page is marked dirty is missing in info module
	* Added feature: Integrate possibility to remove all expired pages in the info module
	* Added feature: Moved rendering of rows in info module to own method to be overridable by XCLASSes
	* Cleanup: Refactored clean dirty pages parts

2009-06-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Info module does not show pages with a dokType above 199

2009-05-08  Oliver Hader  <oliver@typo3.org>

!!!	* Added feature: Changed database table to use InnoDB engine
	* Follow-up to feature #2598: Added missing 'isdirty' field to SQL definitions
	* Follow-up to feature #2598: Added new CLI task 'processDirtyPages' to process elements marked as dirty
	* Follow-up to feature #2598: Set 'isdirty' flag zero when database element gets updated

2009-05-07  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Changed formatting of class tx_ncstaticfilecache and SQL file (non-functional changes)
	* Set version to 2.4.0-dev
	* Set version to 3.0.0-dev
	* Cleanup: Added protected/public definitions and set min. requirement to TYPO3 4.2.0
	* Cleanup: Removed superfluous class for debug output and integrated it to regular class
	* Cleanup: Removed CLI cleaner for elderly TYPO3 releases (< 4.1)
	* Fixed bug: Fixed some hanging record sets
	* Fixed bug: Info module does not work anymore due to calls to protected methods/variables
	* Added feature: Store original URI of request and possibility to recreate the URI by typoLink
	* Added feature #2598: Keep static cache files even if the cache gets flushed by TYPO3
	* Fixed bug: Show generation signature only when the request is served by static cache
	* Added feature: New hook 'createFile_processContent' to modify content before being written to cached file

2008-02-22  Michiel Roos  <michiel@netcreators.com>

	* Added Changelog ;-)
	* Removed version_compare() from insertPageIncache()
	* Rename modfunc1 to infomodule